--- a/style.css
+++ b/style.css
@@ -48,6 +48,14 @@ font-size: 25px;
     
 
 }
+
+.nav a{
+    text-decoration: none;
+}
+.nav a:hover{
+    font-size: 20px;
+    color: blueviolet;
+}
 .hero{
 
     display: flex;
@@ -104,8 +112,7 @@ a{
     margin-top: 50px;
     display: grid;
     grid-template-columns: auto auto;
-   
-    grid-gap: 10px;
+   grid-gap: 10px;
     width: 100%;
     height: 400px;
 }
@@ -135,6 +142,82 @@ a{
     margin-top: 10px;
     width: 50%;
 }
+.space{
+    margin-top: 300px;
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+#imgbac{
+    width: 100%;
+    margin-top: 10px;
+   
+
+}
+.about{
+    position: relative;
+    color: rgb(241, 237, 237);
+    text-align: center;
+}
+
+.section-about{
+    position: absolute;
+    text-align: center;
+    font-size: 20px;
+    color:rgb(0, 0, 0);
+    top: 50px;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 2px;
+  gap: 4rem;
+  width: 600px;
+    margin-left: 100px;
+    margin-top: 25px;
+}
+
+#us{
+    color:rgb(241, 149, 9);
+    font-size: 40px;
+    margin-top: 50px;
+}
+.medium{
+    text-align: center;
+    margin-top: 50px;
+}
+
+.review{
+    display: grid;
+   
+    grid-template-columns: auto auto auto;
+  
+    width: 100%;
+    height: 400px;
+    margin-top: 45px;
+    /* margin-left:60px;
+    margin-right: 60px; */
+    justify-content: center;
+  
+}
+    
+
+
+#rev-con{
+    width: 80%;
+    background-color: blanchedalmond;
+    height: 25vh;
+    text-align: center;
+    padding-top: 50px;
+
+}
+
+
+
+
+
+
+
+
+
 
 @media only screen and (max-width:600px){
   
