--- a/style.css
+++ b/style.css
@@ -12,14 +12,17 @@
     .btn{
 padding: 6px;
 border-width: 3px;
-background-color: burlywood;
-cursor: pointer;
+background-color: rgba(222, 184, 135, 0.175);
 color: black;
+width: 150px;
+transition: all 0.3;
     }
 
- .btn :hover{
-color: cadetblue;
-
+ .btn:hover{
+color: rgb(0, 0, 0);
+width: 200px;
+cursor: pointer;
+border: 2px solid ;
 
  }
 .logo{
@@ -52,10 +55,11 @@ font-size: 25px;
 
 .nav a{
     text-decoration: none;
+    transition: 0.3s all;
 }
 .nav a:hover{
-    font-size: 20px;
-    color: blueviolet;
+transform: scale(1.3);
+    color: rgb(0, 0, 0);
 }
 .hero{
 
@@ -296,7 +300,7 @@ input{
     
 } */
 /* mobile screen */
-@media only screen and (max-width:600px){
+@media (max-width:600px){
   
 .hero{
     display: flex;
@@ -360,7 +364,7 @@ input{
     color: black;
 }
 .backimg{
-    width: 50%;
+    width: 100%;
     
 }
 .img{
@@ -441,5 +445,8 @@ input{
         text-align: center;
         padding-top: 23px;
         font-size: 10px;
+    }
+    .backimg {
+  display: none;
     }
 }
